fix: UI 순서보장